k8s/db/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shop-db
  labels:
    app.kubernetes.io/part-of: shop
    tier: data
