k8s/db/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: shop-db
  labels:
    app: postgres
    tier: data
spec:
  type: ClusterIP
  selector:
    app: postgres
    tier: data
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
