k8s/db/05-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-shop
  namespace: shop-db
spec:
  podSelector:
    matchLabels:
      app: postgres
      tier: data
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: shop
      ports:
        - port: 5432
          protocol: TCP
